#1486 fix icons aligning

--- a/src/app/shared/components/widget-header/widget-header.component.less
+++ b/src/app/shared/components/widget-header/widget-header.component.less
@@ -100,5 +100,6 @@ button {
 
   .ant-btn {
     box-shadow: none;
+    line-height: 1em;
   }
 }
